<resources>
    <string name="title_main">Board Game\nScore</string>
    <string name="title_home">&#x265c; Board Game Score &#x265c;</string>
    <string name="title_account">&#x265c; My profile &#x265c;</string>
    <string name="title_games">&#x265c; Collection &#x265c;</string>
    <string name="title_matches">&#x265c; Matches &#x265c;</string>
    <string name="title_info">&#x265c; Information &#x265c;</string>
    <string name="title_welcome">&#x265c; News &#x265c;</string>
    <string name="title_match">&#x265c; Match &#x265c;</string>
    <string name="title_game">&#x265c; Game &#x265c;</string>
    <string name="title_help">&#x265c; Help &#x265c;</string>
    <string name="title_import_collection">&#x265c; BGG &#x265c;</string>
    <string name="card_title_game">My game</string>
    <string name="card_title_game_match">My match in game</string>
    <string name="card_title_games">My registered games</string>
    <string name="card_title_matches">My matches</string>
    <string name="card_title_players">Players/Friends of the match</string>
    <string name="card_title_players_winners">Game winners</string>
    <string name="card_title_players_with_winners">Players/Match winners</string>
    <string name="card_title_about">About App</string>
    <string name="card_title_friends">My friends</string>
    <string name="card_title_my_profile">My profile</string>
    <string name="card_title_options">Options</string>
    <string name="card_title_my_ranking_game">My game ranking</string>
    <string name="card_title_new_match">My match</string>
    <string name="card_title_new_game">My game</string>
    <string name="card_title_search_game">Find a game</string>
    <string name="card_title_search_game_list">BoardgameGeek.com</string>
    <string name="card_title_finish_match">My game</string>
    <string name="card_title_feedback_match">Game notes/comments</string>
    <string name="card_title_sort_list">Sorting the list</string>
    <string name="card_title_search_collection_bgg">Search Collection</string>
    <string name="card_title_new_collection_bgg">My Collection</string>
    <string name="hint_version">Battista Software &#xa9;2017 - %1$s</string>
    <string name="hint_detail_alias_match">Match Name/Nickname</string>
    <string name="hint_detail_match_obs">Match Notes/Comments</string>
    <string name="hint_detail_match_created_at">Date of match (dd/mm/yyyy)</string>
    <string name="hint_detail_match_schedule_time">Match scheduling time (HH:MM)</string>
    <string name="hint_detail_match_duration">Duration of the match (HH:MM)</string>
    <string name="hint_text_detail_alias_match">*¹ Match name/nickname will be used to identify your match.</string>
    <string name="hint_text_detail_finish_match">*¹ Fill in the data below to end the match.</string>
    <string name="hint_text_detail_feedback_match">*¹ Select a rating for your match (Normal rating is the default).</string>
    <string name="hint_share_match">See my game match {0}!!!</string>
    <string name="hint_share_match_full">See the details of my match {0} game {1}!!!</string>
    <string name="hint_title_share_match">Match Details</string>
    <string name="msg_username_friend_required">Your friends name is required!</string>
    <string name="msg_username_player_required">Player name is required!</string>
    <string name="msg_username_required">Username is required!</string>
    <string name="msg_username_bgg_required">BoardGameGeek user  is required!</string>
    <string name="msg_name_game_required">Game name is required!</string>
    <string name="msg_alias_match_required">Match name/Nickname is required!</string>
    <string name="msg_game_required">You must select at least 1 game to save/edit this match!</string>
    <string name="msg_mail_required">Email is required!</string>
    <string name="msg_game_dont_found_open">The game could not be found, please add a link from the game page.</string>
    <string name="msg_game_dont_found_search">The game could not be found, please try again.</string>
    <string name="msg_game_error_add_game">Error while trying to add game. Please try again.</string>
    <string name="msg_collection_dont_found_search">The BoardGameGeek collection could not be found, please try again.</string>
    <string name="msg_collection_dont_found_import">You must select at least one collection type to import, please try again.</string>
    <string name="msg_error_game_with_partner">Error while trying to delete game %1$s. Check for matches associated with the game.</string>
    <string name="msg_error_add_search_game">Error while trying to add the new game. Please try again.</string>
    <string name="msg_share_detail_match">Generating the start image for the share, please wait.</string>
    <string name="msg_action_searching">Please wait! Searching &#8230;</string>
    <string name="msg_action_saving">Please wait! Saving &#8230;</string>
    <string name="msg_action_loading">Please wait! Loading &#8230;</string>
    <string name="toast_start_import_collection">Please wait! Data is being imported in the background&#8230;</string>
    <string name="toast_start_export_data">Please wait! Data is being exported in the background&#8230;</string>
    <string name="toast_finish_export_data">All data has been successfully exported!</string>
    <string name="toast_finish_import_data">All data has been successfully restored! ANDROID PIE (9+) NEEDED TO RESTART APPLICATION TO RUN NEW BACKUP!!!</string>
    <string name="toast_reload_all_img_data">All images will be reloaded in the background!</string>
    <string name="toast_reload_all_winners_matches">All winners matches will be reloaded in the background!</string>
    <string name="toast_error_import_data">An unexpected error occurred while trying to restore the data, please try again!</string>
    <string name="toast_error_export_data">An unexpected error occurred while trying to export the data, please try again!</string>
    <string name="toast_error_login_google">There was an error trying to log in to google, please try again!</string>
    <string name="text_under_construction">Under construction, please wait!</string>
    <string name="text_home_games">games</string>
    <string name="text_home_matches">matches</string>
    <string name="text_home_matches_time">time</string>
    <string name="text_home_last_play">Last match: %1$s</string>
    <string name="text_home_stats_info_01">*¹ Your ranking with the 5 most played games in my collection.</string>
    <string name="text_home_stats_empty_view">No registered items. Please add a new match.</string>
    <string name="text_home_stats_error_view">Error trying to load your game ranking, please try again.</string>
    <string name="text_profile_friends_empty_view">No friends added. Please add new friends to play your games.</string>
    <string name="text_profile_friends_error_view">Error while trying to load friends list. Please try again.</string>
    <string name="text_default_username">Default User</string>
    <string name="text_default_mail">user@mail.com</string>
    <string name="text_home_username">Hi, %1$s</string>
    <string name="text_username">%1$s</string>
    <string name="text_mail">%1$s</string>
    <string name="text_date_created">%1$s</string>
    <string name="text_dialog_change_avatar_info_01">*¹ Select the avatar you want to use from the list below.</string>
    <string name="text_dialog_edit_profile_info_01">*¹ Fill in the fields below with your data.</string>
    <string name="text_dialog_edit_profile_custom_font_info_01">*¹ You must restart the application for this action to take effect.</string>
    <string name="text_dialog_edit_profile_reset">Do you want to reset your profile?</string>
    <string name="text_dialog_edit_custom_font">Do you want to use custom text fonts?</string>
    <string name="text_dialog_edit_automatic_backup">Do you want to use automatic backup?</string>
    <string name="text_dialog_edit_profile_info_02">*² All data in your user will be lost and this action can not be reversed.</string>
    <string name="text_profile_friends_info_01">*¹ Add a new friend to play in your matches.</string>
    <string name="text_profile_options_info_01">*¹ Some extra app features.</string>
    <string name="text_profile_about_info_01">*¹ Information about the app, author, facebook page and others.</string>
    <string name="text_legend_info_01">*¹ Legend with the definition of the icons used.</string>
    <string name="text_legend_game_badge_game">Game rating.</string>
    <string name="text_legend_game_players">Player numbers supported.</string>
    <string name="text_legend_game_time">Average time spent.</string>
    <string name="text_legend_game_age">Recommended minimum age to play the game.</string>
    <string name="text_legend_game_sort_list">Change the ordering of the game list.</string>
    <string name="text_legend_game_year">Year of publication of the game.</string>
    <string name="text_legend_game_my_game">Gaming indicator for my collection.</string>
    <string name="text_legend_game_favorite">Indicator for favorite game.</string>
    <string name="text_legend_game_want_game">Game indicator I want in my collection.</string>
    <string name="text_legend_match_match">Match Name/Nickname.</string>
    <string name="text_legend_match_date">Date the match happened (dd/mm/yyyy).</string>
    <string name="text_legend_match_players">Number of players participating in the match.</string>
    <string name="text_legend_match_time">Estimated duration of the match (HH: MM).</string>
    <string name="text_legend_match_feedback">Match rating (Bad, Bad, Normal, Good and Excellent).</string>
    <string name="text_legend_match_sort_list">Change the ordering of the list of matches.</string>
    <string name="text_legend_ranking_game_matches">Number of game starts recorded.</string>
    <string name="text_legend_ranking_game_date">Date the last recorded match of the game occurred.</string>
    <string name="text_legend_ranking_game_time">Total minutes played in the game (HH: MM).</string>
    <string name="text_legend_ranking_game_sort_list">Ordered list of top five games played, in descending order.</string>
    <string name="text_dialog_export_data_info_01">*¹ The data will be exported in the background and will be available in the application storage directory.</string>
    <string name="text_dialog_import_data_info_01">*¹ The data will be imported from the files in the applications storage directory.</string>
    <string name="text_dialog_export_data_user">Do you want to export your user data?</string>
    <string name="text_dialog_import_data_user">Do you want to import the data to your user?</string>
    <string name="text_dialog_export_data_db">Do you want to export data from my collection and its registered items?</string>
    <string name="text_dialog_import_data_db">Do you want to import data into my collection and matches?</string>
    <string name="field_username">User Name</string>
    <string name="field_mail">Your users email</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_export">BACKUP</string>
    <string name="btn_import">RESTORE</string>
    <string name="action_home">home</string>
    <string name="action_games">collection</string>
    <string name="action_account">profile</string>
    <string name="action_copy">duplicate</string>
    <string name="action_detail">details</string>
    <string name="action_info">info</string>
    <string name="action_edit">edit</string>
    <string name="action_finish">finish</string>
    <string name="action_remove">delete</string>
    <string name="dialog_title_edit_profile">Edit information</string>
    <string name="dialog_title_export_data">Export data</string>
    <string name="dialog_title_import_data">Import data</string>
</resources>