<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_action_copy"
        android:enabled="true"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy"/>

    <item
        android:id="@+id/menu_action_detail"
        android:enabled="true"
        android:icon="@drawable/ic_detail"
        android:title="@string/action_detail"/>

    <item
        android:id="@+id/menu_action_edit"
        android:enabled="true"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_edit"/>

    <item
        android:id="@+id/menu_action_finish"
        android:enabled="true"
        android:icon="@drawable/ic_finish"
        android:title="@string/action_finish"/>

    <item
        android:id="@+id/menu_action_remove"
        android:enabled="true"
        android:icon="@drawable/ic_remove"
        android:title="@string/action_remove"/>

</menu>