<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/action_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_games"
        android:enabled="true"
        android:icon="@drawable/ic_games"
        android:title="@string/action_games"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/action_account"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/action_info"
        app:showAsAction="always" />

</menu>