<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/dialog_view_export_import_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/no_dimen"
             android:animateLayoutChanges="true"
             android:orientation="vertical"
             android:padding="@dimen/activity_padding"
             android:scrollbars="none">

    <LinearLayout
        android:id="@+id/container_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_view_export_data_title"
            style="@style/CardTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_export_data"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_line"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:background="@color/colorLine"/>

        <TextView
            android:id="@+id/dialog_view_export_data_info_01"
            style="@style/HintTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_dialog_export_data_info_01"/>

        <Switch
            android:id="@+id/dialog_view_export_data_user"
            style="@style/CardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:checked="true"
            android:text="@string/text_dialog_export_data_user"/>

        <Switch
            android:id="@+id/dialog_view_export_data_db"
            style="@style/CardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:checked="true"
            android:text="@string/text_dialog_export_data_db"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/dialog_view_export_import_data_btn_export"
                style="@style/ButtonStyleWithBorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_export"/>

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_view_import_data_title"
            style="@style/CardTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/dialog_title_import_data"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_line"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:background="@color/colorLine"/>

        <TextView
            android:id="@+id/dialog_view_import_data_info_01"
            style="@style/HintTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/text_dialog_import_data_info_01"/>

        <Switch
            android:id="@+id/dialog_view_import_data_user"
            style="@style/CardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:checked="true"
            android:text="@string/text_dialog_import_data_user"/>

        <Switch
            android:id="@+id/dialog_view_import_data_db"
            style="@style/CardTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:checked="true"
            android:text="@string/text_dialog_import_data_db"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:weightSum="2">

            <Button
                android:id="@+id/dialog_view_export_import_data_btn_cancel"
                style="@style/ButtonStyleActive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancel"/>

            <Button
                android:id="@+id/dialog_view_export_import_data_btn_import"
                style="@style/ButtonStyleWithBorder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_import"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>