<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/element_padding">

    <TextView
        style="@style/CardTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/element_vertical_margin"
        android:text="@string/text_legend_info_01"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_matches"
        android:drawablePadding="@dimen/element_padding"
        android:gravity="center_vertical"
        android:padding="@dimen/element_padding"
        android:text="@string/text_legend_ranking_game_matches"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_date"
        android:drawablePadding="@dimen/element_padding"
        android:gravity="center_vertical"
        android:padding="@dimen/element_padding"
        android:text="@string/text_legend_ranking_game_date"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_checked"
        android:drawablePadding="@dimen/element_padding"
        android:gravity="center_vertical"
        android:padding="@dimen/element_padding"
        android:text="@string/text_legend_game_my_game"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_match_time"
        android:drawablePadding="@dimen/element_padding"
        android:gravity="center_vertical"
        android:padding="@dimen/element_padding"
        android:text="@string/text_legend_ranking_game_time"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_line"
        android:layout_margin="@dimen/element_horizontal_margin"
        android:background="@color/colorLine"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_sort_list"
        android:drawablePadding="@dimen/element_padding"
        android:gravity="center_vertical"
        android:padding="@dimen/element_padding"
        android:text="@string/text_legend_ranking_game_sort_list"/>

</LinearLayout>
