<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:padding="@dimen/activity_padding"
    android:scrollbars="vertical">

    <TextView
        style="@style/CardTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/text_legend_info_01"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/badge_game_none"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_badge_game"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_players"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_players"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_time"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_time"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_age"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_age"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_date_year"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_year"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_my_game"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_my_game"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_favorite"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_favorite"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_game_want_game"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_want_game"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_line"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorLine"/>

    <TextView
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_sort_list"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingBottom="@dimen/element_padding"
        android:text="@string/text_legend_game_sort_list"/>

</LinearLayout>
