<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_view_edit_profile"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/no_dimen"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        android:scrollbars="none">

    <LinearLayout
            android:id="@+id/container_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/dialog_view_edit_profile_title"
                style="@style/CardTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_title_edit_profile" />

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_line"
                android:layout_marginBottom="@dimen/element_vertical_margin"
                android:background="@color/colorLine" />

        <TextView
                android:id="@+id/dialog_view_edit_profile_info_01"
                style="@style/HintTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_dialog_edit_profile_info_01" />

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/element_vertical_margin">

            <EditText
                    android:id="@+id/dialog_view_edit_profile_username"
                    style="@style/InputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/field_username"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/element_vertical_margin">

            <EditText
                    android:id="@+id/dialog_view_edit_profile_mail"
                    style="@style/InputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/field_mail"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_vertical_margin">

            <Button
                    android:id="@+id/dialog_view_edit_profile_btn_save"
                    style="@style/ButtonStyleActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/btn_save" />

            <Button
                    android:id="@+id/dialog_view_edit_profile_btn_cancel"
                    style="@style/ButtonStyleWithBorder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/dialog_view_edit_profile_btn_save"
                    android:text="@string/btn_cancel" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>